<resources>
    <string name="app_name">ScoundrelDiceApp</string>
    <string-array name="actions">
        <item>Hunt</item>
        <item>Study</item>
        <item>Survey</item>
        <item>Tinker</item>
        <item>Finesse</item>
        <item>Skirmish</item>
        <item>Wreck</item>
        <item>Attune</item>
        <item>Command</item>
        <item>Consort</item>
        <item>Sway</item>
    </string-array>
    <string-array name="die_results">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="positions">
    <item>"Controlled"</item>
    <item>"Risky"</item>
    <item>"Desperate"</item>
    </string-array>
    <string-array name="effects">
        <item>"Limited"</item>
        <item>"Standard"</item>
        <item>"Great"</item>
    </string-array>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="information">This app is an unofficial tool for a roleplaying game called Blades in the Dark.\nApplication is created as part of a mobile programming course organized by Opiframe Oy. \n\nContact me: vili.ahonen@hotmail.com \n\n</string>
    <string name="copyright">Copyright of Blades in the Dark belongs to John Harper.</string>
    <string name="history">History</string>
    <string name="mutecheckbox">Mute all sounds</string>
    <string name="saveSettings">Save</string>
    <string name="history_result">Total roll: </string>
    <string name="history_highest">Highest: </string>
    <string name="deletedbButton">Clear roll history</string>
</resources>
