<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/history"
                android:icon="@drawable/ic_poll_grey_24dp"
                app:showAsAction="always|withText"
                android:title="@string/history" />
        <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings_grey_24dp"
                app:showAsAction="always|withText"
                android:title="@string/settings" />
        <item
                android:id="@+id/info"
                android:icon="@drawable/ic_info_grey_24dp"
                app:showAsAction="always|withText"
                android:title="@string/info" />

    </group>
</menu>