<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background">

    <TextView
            android:id="@+id/settingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/settings"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.072"/>
    <CheckBox
            android:text="@string/mutecheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/muteCheckBox" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/settingsTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.498" android:duplicateParentState="true"
            android:buttonTint="@color/colorDark"/>
    <Button
            android:text="@string/saveSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveSettings"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/reCreateDb" android:layout_marginTop="120dp"/>
    <Button
            android:text="@string/deletedbButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dbDelete"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/muteCheckBox"/>
    <Button
            android:text="Fun button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reCreateDb" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/dbDelete" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

</android.support.constraint.ConstraintLayout>